--- a/series/index.html
+++ b/series/index.html
@@ -11,23 +11,23 @@
 <title>Series  - A blog by Harry McCarney</title>
 <meta name="description" content="A blog about entrepreneurship and technology.">
 
-<link rel="alternate" type="application/rss+xml" href="https://harrymccarney.github.io/series/index.xml" title="A blog by Harry McCarney" />
-<link rel="icon" type="image/x-icon" href="https://harrymccarney.github.io/favicon.ico">
-<link rel="apple-touch-icon-precomposed" href="https://harrymccarney.github.io/favicon.png">
+<link rel="alternate" type="application/rss+xml" href="https://harrymccarney.com/series/index.xml" title="A blog by Harry McCarney" />
+<link rel="icon" type="image/x-icon" href="https://harrymccarney.com/favicon.ico">
+<link rel="apple-touch-icon-precomposed" href="https://harrymccarney.com/favicon.png">
 
-<link rel="stylesheet" href="https://harrymccarney.github.io/css/style.css?rnd=1589382016" />
+<link rel="stylesheet" href="https://harrymccarney.com/css/style.css?rnd=1589446914" />
 
-<link rel="stylesheet" href="https://harrymccarney.github.io/css/my.css?rnd=1589382016">
+<link rel="stylesheet" href="https://harrymccarney.com/css/my.css?rnd=1589446914">
 
 <meta property="og:title" content="Series" />
 <meta property="og:description" content="A blog about entrepreneurship and technology." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://harrymccarney.github.io/series/" />
-<meta property="og:image" content="https://harrymccarney.github.io/images/og-featured.png"/>
+<meta property="og:url" content="https://harrymccarney.com/series/" />
+<meta property="og:image" content="https://harrymccarney.com/images/og-featured.png"/>
 
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://harrymccarney.github.io/images/og-featured.png"/>
+<meta name="twitter:image" content="https://harrymccarney.com/images/og-featured.png"/>
 
 <meta name="twitter:title" content="Series"/>
 <meta name="twitter:description" content="A blog about entrepreneurship and technology."/>
@@ -45,7 +45,7 @@
         <header> 
             
                 <h1 class="site-header">
-    <a href="https://harrymccarney.github.io/">A blog by Harry McCarney</a>
+    <a href="https://harrymccarney.com/">A blog by Harry McCarney</a>
 </h1>
 <nav>
     
